[package]
name = "lol-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
regex = "1.10.2"
reqwest = "0.11.22"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serenity = "0.11.7"
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "time"] }
time = "0.3.30"
tokio = { version = "1.33.0", features = ["full"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
